Subtle alignment/margin fixes for AR

--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -200,7 +200,7 @@
   body.ar & {
     background-position: calc(100% - 5px) center;
     padding-left: 0;
-    padding-right: 30px;
+    padding-right: 34px;
   }
 }
 
