--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -75,6 +75,11 @@
       }
     }
 
+    .page-detail__stamp {
+      background-position: right center;
+      padding-right: 25px;
+    }
+
   }
 
   .page-detail__header {
@@ -102,7 +107,9 @@
     background-size: auto 20px;
     line-height: 1.8;
     margin-bottom: 10px;
+
   }
+
 
   .page-detail__icon {
     display: inline-block;
